--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,7 +1,7 @@
 <h1>ThriftClick</h1>
 
 <h5>Name: </h5>
-<h5>{{ name }}</h5>
+<p>{{ name }}</p>
 <h5>Price: </h5>
 <h5>{{ price }}</h5>
 <h5>Description: </h5>
