--- a/main/templates/create_product_entry.html
+++ b/main/templates/create_product_entry.html
@@ -11,7 +11,7 @@
       <tr>
         <td></td>
         <td style="text-align: right;">
-          <input type="submit" value="Add Product Entry" style="padding: 10px 20px; background-color: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 1em;">
+          <input type="submit" value="Add Product" style="padding: 10px 20px; background-color: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 1em;">
         </td>
       </tr>
     </table>
