--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -131,7 +131,7 @@
                 {% endfor %}
             </table>
             <a href="{% url 'main:create_product_entry' %}">
-                <button>Add Clothing! </button>
+                <button>Add Clothing</button>
             </a>
         </div>
     </div>
