--- a/main/templates/edit_product.html
+++ b/main/templates/edit_product.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block meta %}
-<title>Create product</title>
+<title>Edit Product</title>
 {% endblock meta %}
 
 {% block content %}
@@ -12,7 +12,7 @@
     <p class="text-center text-gray-500 mb-6">"Welcome to Thrift Click! Redefine your style and make every click count!"</p>
 
     <div class="container bg-[#fffee9] p-5 rounded-lg shadow-lg">
-        <h1 class="text-3xl font-bold text-center mb-8 text-black">Contribute Your Style !</h1>
+        <h1 class="text-3xl font-bold text-center mb-8 text-black">Edit Product</h1>
 
         <div class="bg-white shadow-md rounded-lg p-6 form-style">
             <form method="POST" class="space-y-6">
@@ -35,7 +35,7 @@
                 {% endfor %}
                 <div class="flex justify-center mt-6">
                     <button type="submit" class="bg-[#ecb984] text-white font-semibold px-6 py-3 rounded-lg hover:bg-[#d58258] transition duration-300 ease-in-out w-full">
-                        Add Clothing
+                        Save
                     </button>
                 </div>
             </form>
