--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,7 +17,7 @@
             </div>
             <div class="flex flex-1 items-center justify-between sm:items-stretch sm:justify-start">
                 <div class="flex flex-shrink-0 items-center">
-                    <h1 class="text-2xl font-bold text-white ml-10">Thrift Click. </h1> <!-- Added margin to prevent overlap -->
+                    <h1 style="color: #963a2f;" class="text-2xl font-bold text-white ml-10">Thrift Click. </h1> <!-- Added margin to prevent overlap -->
                     <!-- Only show these links on desktop view -->
                     <div class="hidden sm:flex">
                         <span class="text-white px-3 py-2 text-sm font-medium">Home</span>
