--- a/main/templates/create_product_entry.html
+++ b/main/templates/create_product_entry.html
@@ -37,6 +37,9 @@
                     <button type="submit" class="bg-[#ecb984] text-white font-semibold px-6 py-3 rounded-lg hover:bg-[#d58258] transition duration-300 ease-in-out w-full">
                         Add Clothing
                     </button>
+                    <a href="{% url 'main:show_main' %}" class="bg-gray-400 text-white font-semibold px-6 py-3 rounded-lg hover:bg-gray-500 transition duration-300 ease-in-out w-full text-center">
+                        Cancel
+                    </a>
                 </div>
             </form>
         </div>
