--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -3,48 +3,213 @@
 
 {% block meta %}
 <title>Thrift Click</title>
+<script src="https://cdn.jsdelivr.net/npm/dompurify@3.1.7/dist/purify.min.js"></script>
 {% endblock meta %}
+
 {% block content %}
 {% include 'navbar.html' %}
+<div class="overflow-x-hidden px-4 md:px-8 pb-8 pt-24 min-h-screen bg-gray-100 flex flex-col">
+  
+  <style>
+    .custom-bg {
+      background-color: #ecb984; /* Tomato color */
+    }
+    .custom-bg:hover {
+    background-color: #963a2f; /* Hover state (LimeGreen color) */
+  }
+  .no-hover-bg {
+    background-color: #ecb984; /* Same background color without hover effect */
+  }
+  </style>
 
-<div class="overflow-x-hidden px-4 md:px-8 pb-8 pt-24 min-h-screen bg-[#fffee9] flex flex-col">
-    <p class="text-center text-gray-500 mb-6">"Welcome to Thrift Click! Redefine your style and make every click count!"</p>
-  <div class="container bg-[#fffee9] p-5 rounded-lg shadow-lg">
-
-    <!-- Conditional: Display image if no products -->
-    {% if not product_entries %}
-    <div class="flex flex-col items-center justify-center min-h-[24rem] p-6">
-        <img src="{% static 'css/image/sedih-aja.png' %}" alt="Sad Girl" class="w-32 h-33 mb-4"/>
-        <p class="text-center text-gray-600 mt-4">Belum ada data produk.</p>
+  <div class="px-3 mb-4">
+    <div class="flex rounded-md items-center no-hover-bg py-2 px-4 w-fit">
+      <h1 class="text-white text-center">Last Login: {{last_login}}</h1>
     </div>
-    {% else %}
-    <!-- Card Layout -->
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 w-full mt-6">
-      {% for product_entry in product_entries %}
-      <div class="bg-[#fff8e7] p-4 rounded-lg border border-[#f3e2c7] shadow-md">
-        <strong class="block text-[#ca3a3a] text-xl mb-2">{{ product_entry.name }}</strong>
-        <p class="mb-2"><strong>Price:</strong> {{ product_entry.price }}</p>
-        <p class="mb-4"><strong>Description:</strong> {{ product_entry.description }}</p>
-        <div class="flex justify-between">
-          <a href="{% url 'main:edit_product' product_entry.pk %}">
-            <button class="bg-[#ffdc73] p-2 rounded hover:bg-[#ffd04d]">Edit </button>
-          </a>
-          <a href="{% url 'main:delete_product' product_entry.pk %}">
-            <button class="bg-[#ffabab] p-2 rounded hover:bg-[#ffb6b6]">Delete</button>
-          </a>
-        </div>
+  </div>
+
+  <div class="flex justify-end mb-6">
+    <a href="{% url 'main:create_product_entry' %}" class="custom-bg hover:custom-bg text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105 mx-4">
+      Add New Product Entry
+    </a>
+    <button data-modal-target="crudModal" data-modal-toggle="crudModal" class="btn custom-bg hover:custom-bg text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105" onclick="showModal();">
+      Add New Product Entry by AJAX
+    </button>
+  </div>
+  
+  <div id="product_entry_cards"></div>
+  <div id="productModal" tabindex="-1" aria-hidden="true" class="hidden fixed inset-0 z-50 w-full flex items-center justify-center bg-gray-800 bg-opacity-50 overflow-x-hidden overflow-y-auto transition-opacity duration-300 ease-out">
+    <div id="productModalContent" class="relative bg-white rounded-lg shadow-lg w-5/6 sm:w-3/4 md:w-1/2 lg:w-1/3 mx-4 sm:mx-0 transform scale-95 opacity-0 transition-transform transition-opacity duration-300 ease-out">
+      <!-- Modal header -->
+      <div class="flex items-center justify-between p-4 border-b rounded-t">
+        <h3 class="text-xl font-semibold text-gray-900">
+          Add New Product Entry
+        </h3>
+        <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center" id="closeModalBtn">
+          <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+          </svg>
+          <span class="sr-only">Close modal</span>
+        </button>
       </div>
-      {% endfor %}
-    </div>
-    {% endif %}
+      <!-- Modal body -->
+      <div class="px-6 py-4 space-y-6 form-style">
+        <form id="ProductEntryForm">
+          <div class="mb-4">
+            <label for="name" class="block text-sm font-medium text-gray-700">Product Name</label>
+            <input type="text" id="name" name="name" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Enter product name" required>
+          </div>
+          <div class="mb-4">
+            <label for="description" class="block text-sm font-medium text-gray-700">Description</label>
+            <textarea id="description" name="description" rows="3" class="mt-1 block w-full h-52 resize-none border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Describe the product" required></textarea>
+          </div>
+          <div class="mb-4">
+            <label for="price" class="block text-sm font-medium text-gray-700">Price</label>
+            <input type="number" id="price" name="price" min="1" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Enter product price" required>
+          </div>
+        </form>
+      </div>
 
-    <div class="flex justify-center mt-6">
-      <a href="{% url 'main:create_product_entry' %}">
-        <button class="bg-[#ecb984] text-white py-2 px-4 rounded-lg hover:bg-[#d58258]">Add Your Clothing To Our Closet</button>
-      </a>
+      <!-- Modal footer -->
+      <div class="flex flex-col space-y-2 md:flex-row md:space-y-0 md:space-x-2 p-6 border-t border-gray-200 rounded-b justify-center md:justify-end">
+        <button type="button" class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-lg" id="cancelButton">Cancel</button>
+        <button type="submit" id="submitProductEntry" form="ProductEntryForm" class="bg-indigo-700 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded-lg">Save</button>
+      </div>
     </div>
-
-    <h5 class="text-center text-gray-500 mt-4">Sesi terakhir login: {{ last_login }}</h5>
   </div>
 </div>
+
+<script>
+  function addProductEntry() {
+    const nameInput = document.getElementById("name").value;
+    const descriptionInput = document.getElementById("description").value;
+    const priceInput = document.getElementById("price").value;
+
+    const sanitizedData = {
+      name: DOMPurify.sanitize(nameInput),
+      description: DOMPurify.sanitize(descriptionInput),
+      price: priceInput
+    };
+
+    fetch("{% url 'main:add_product_entry_ajax' %}", {
+      method: "POST",
+      headers: {
+        'X-CSRFToken': '{{ csrf_token }}'  // Add CSRF token for security
+      },
+      body: new URLSearchParams(sanitizedData),  // Encode data as URL parameters
+    })
+    .then(response => {
+      if (response.ok) {
+        return refreshProductEntries();  // Refresh the product entries if successful
+      } else {
+        return response.text().then(text => {
+          throw new Error(text);  // Throw an error with the response text
+        });
+      }
+    })
+    .then(() => {
+      document.getElementById("ProductEntryForm").reset(); // Reset form on success
+      closeModal(); // Call a function to close the modal
+    })
+    .catch(error => {
+      alert(error.message); // Show the error message
+    });
+
+    return false;  // Prevent default form submission
+  }
+
+  function closeModal() {
+    document.querySelector("[data-modal-toggle='productModal']").click(); // Simulate a click to close the modal
+  }
+  
+  async function getProductEntries(){
+    return fetch("{% url 'main:show_json' %}").then((res) => res.json())
+  }
+
+  async function refreshProductEntries() {
+    document.getElementById("product_entry_cards").innerHTML = "";
+    document.getElementById("product_entry_cards").className = "";
+    const productEntries = await getProductEntries();
+    let htmlString = "";
+    let classNameString = "";
+
+    if (productEntries.length === 0) {
+        classNameString = "flex flex-col items-center justify-center min-h-[24rem] p-6";
+        htmlString = `
+            <div class="flex flex-col items-center justify-center min-h-[24rem] p-6">
+                <img src="{% static 'image/sedih-aja.png' %}" alt="No products" class="w-32 h-32 mb-4"/>
+                <p class="text-center text-gray-600 mt-4">No products available in the store.</p>
+            </div>
+        `;
+    } else {
+        classNameString = "columns-1 sm:columns-2 lg:columns-3 gap-6 space-y-6 w-full";
+        productEntries.forEach((item) => {
+            const name = DOMPurify.sanitize(item.fields.name);
+            const description = DOMPurify.sanitize(item.fields.description);
+            const price = item.fields.price;
+
+            htmlString += `
+            <div class="relative break-inside-avoid">
+                <div class="relative top-5 bg-indigo-100 shadow-md rounded-lg mb-6 break-inside-avoid flex flex-col border-2 border-indigo-300 transform rotate-1 hover:rotate-0 transition-transform duration-300">
+                    <div class="bg-indigo-200 text-gray-800 p-4 rounded-t-lg border-b-2 border-indigo-300">
+                        <h3 class="font-bold text-xl mb-2">${name}</h3>
+                        <p class="text-gray-600">Price: $${price}</p>
+                    </div>
+                    <div class="p-4">
+                        <p class="font-semibold text-lg mb-2">Description</p>
+                        <p class="text-gray-700 mb-2">${description}</p>
+                    </div>
+                </div>
+                <div class="absolute top-0 -right-4 flex space-x-1">
+                    <a href="/edit-product/${item.pk}" class="bg-yellow-500 hover:bg-yellow-600 text-white rounded-full p-2 transition duration-300 shadow-md">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-9 w-9" viewBox="0 0 20 20" fill="currentColor">
+                            <path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
+                        </svg>
+                    </a>
+                    <a href="/delete/${item.pk}" class="bg-red-500 hover:bg-red-600 text-white rounded-full p-2 transition duration-300 shadow-md">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-9 w-9" viewBox="0 0 20 20" fill="currentColor">
+                            <path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clip-rule="evenodd" />
+                        </svg>
+                    </a>
+                </div>
+            </div>
+            `;
+        });
+    }
+    document.getElementById("product_entry_cards").className = classNameString;
+    document.getElementById("product_entry_cards").innerHTML = htmlString;
+}
+refreshProductEntries();
+
+  const modal = document.getElementById('productModal');
+  const modalContent = document.getElementById('productModalContent');
+
+  function showModal() {
+    const modal = document.getElementById('productModal');
+    const modalContent = document.getElementById('productModalContent');
+
+    modal.classList.remove('hidden'); 
+    setTimeout(() => {
+      modalContent.classList.remove('opacity-0', 'scale-95');
+      modalContent.classList.add('opacity-100', 'scale-100');
+    }, 50); 
+  }
+
+  function hideModal() {
+    const modal = document.getElementById('productModal');
+    const modalContent = document.getElementById('productModalContent');
+
+    modalContent.classList.remove('opacity-100', 'scale-100');
+    modalContent.classList.add('opacity-0', 'scale-95');
+
+    setTimeout(() => {
+      modal.classList.add('hidden');
+    }, 150); 
+  }
+
+  document.getElementById("cancelButton").addEventListener("click", hideModal);
+  document.getElementById("closeModalBtn").addEventListener("click", hideModal);
+  document.getElementById("submitProductEntry").onclick = addProductEntry
+
+</script>
 {% endblock content %}
