--- a/main/templates/card_product.html
+++ b/main/templates/card_product.html
@@ -1,10 +1,16 @@
 <div class="relative break-inside-avoid">
+  <style>
+    .custom-bg {
+      background-color: #ecb984; /* Tomato color */
+    }
+  </style>
+
     <div class="absolute top-2 z-10 left-1/2 -translate-x-1/2 flex items-center -space-x-2">
-      <div class="w-[3rem] h-8 bg-gray-200 rounded-md opacity-80 -rotate-90"></div>
-      <div class="w-[3rem] h-8 bg-gray-200 rounded-md opacity-80 -rotate-90"></div>
+      <div class="w-[3rem] h-8 custom-bg rounded-md opacity-80 -rotate-90"></div>
+      <div class="w-[3rem] h-8 custom-bg rounded-md opacity-80 -rotate-90"></div>
     </div>
-    <div class="relative top-5 bg-indigo-100 shadow-md rounded-lg mb-6 break-inside-avoid flex flex-col border-2 border-indigo-300 transform rotate-1 hover:rotate-0 transition-transform duration-300">
-      <div class="bg-indigo-200 text-gray-800 p-4 rounded-t-lg border-b-2 border-indigo-300">
+    <div class="relative top-5 custom-bg shadow-md rounded-lg mb-6 break-inside-avoid flex flex-col border-2 border-indigo-300 transform rotate-1 hover:rotate-0 transition-transform duration-300">
+      <div class="custom-bg text-gray-800 p-4 rounded-t-lg border-b-2 border-indigo-300">
         <h3 class="font-bold text-xl mb-2">{{product_entry.product}}</h3>
         <p class="text-gray-600">{{product_entry.time}}</p>
       </div>
