--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -8,8 +8,8 @@
 
 {% block content %}
 {% include 'navbar.html' %}
-<div class="overflow-x-hidden px-4 md:px-8 pb-8 pt-24 min-h-screen bg-gray-100 flex flex-col">
-  
+<div class="overflow-x-hidden px-4 md:px-8 pb-8 pt-24 min-h-screen bg-[#FFFEE] flex flex-col">
+
   <style>
     .custom-bg {
       background-color: #ecb984; /* Tomato color */
@@ -22,13 +22,7 @@
   }
   </style>
 
-  <div class="px-3 mb-4">
-    <div class="flex rounded-md items-center no-hover-bg py-2 px-4 w-fit">
-      <h1 class="text-white text-center">Last Login: {{last_login}}</h1>
-    </div>
-  </div>
-
-  <div class="flex justify-end mb-6">
+  <div class="flex justify-end mb-3">
     <a href="{% url 'main:create_product_entry' %}" class="custom-bg hover:custom-bg text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105 mx-4">
       Add New Product Entry
     </a>
@@ -36,10 +30,14 @@
       Add New Product Entry by AJAX
     </button>
   </div>
-  
+
+  <h1 class= "text-right pr-30"  style="color: #963a2f;">Last Login: {{last_login}}</h1>
+
   <div id="product_entry_cards"></div>
+
   <div id="productModal" tabindex="-1" aria-hidden="true" class="hidden fixed inset-0 z-50 w-full flex items-center justify-center bg-gray-800 bg-opacity-50 overflow-x-hidden overflow-y-auto transition-opacity duration-300 ease-out">
     <div id="productModalContent" class="relative bg-white rounded-lg shadow-lg w-5/6 sm:w-3/4 md:w-1/2 lg:w-1/3 mx-4 sm:mx-0 transform scale-95 opacity-0 transition-transform transition-opacity duration-300 ease-out">
+      
       <!-- Modal header -->
       <div class="flex items-center justify-between p-4 border-b rounded-t">
         <h3 class="text-xl font-semibold text-gray-900">
@@ -52,6 +50,7 @@
           <span class="sr-only">Close modal</span>
         </button>
       </div>
+
       <!-- Modal body -->
       <div class="px-6 py-4 space-y-6 form-style">
         <form id="ProductEntryForm">
@@ -59,10 +58,12 @@
             <label for="name" class="block text-sm font-medium text-gray-700">Product Name</label>
             <input type="text" id="name" name="name" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Enter product name" required>
           </div>
+
           <div class="mb-4">
             <label for="description" class="block text-sm font-medium text-gray-700">Description</label>
             <textarea id="description" name="description" rows="3" class="mt-1 block w-full h-52 resize-none border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Describe the product" required></textarea>
           </div>
+
           <div class="mb-4">
             <label for="price" class="block text-sm font-medium text-gray-700">Price</label>
             <input type="number" id="price" name="price" min="1" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Enter product price" required>
@@ -71,6 +72,8 @@
       </div>
 
       <!-- Modal footer -->
+      <div id="error-message" style="color: red; padding-left: 120px; " class="flex justify-end pr-7"></div>
+
       <div class="flex flex-col space-y-2 md:flex-row md:space-y-0 md:space-x-2 p-6 border-t border-gray-200 rounded-b justify-center md:justify-end">
         <button type="button" class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-lg" id="cancelButton">Cancel</button>
         <button type="submit" id="submitProductEntry" form="ProductEntryForm" class="bg-indigo-700 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded-lg">Save</button>
@@ -81,49 +84,32 @@
 
 <script>
   function addProductEntry() {
-    const nameInput = document.getElementById("name").value;
-    const descriptionInput = document.getElementById("description").value;
-    const priceInput = document.getElementById("price").value;
-
-    const sanitizedData = {
-      name: DOMPurify.sanitize(nameInput),
-      description: DOMPurify.sanitize(descriptionInput),
-      price: priceInput
-    };
-
-    fetch("{% url 'main:add_product_entry_ajax' %}", {
-      method: "POST",
-      headers: {
-        'X-CSRFToken': '{{ csrf_token }}'  // Add CSRF token for security
-      },
-      body: new URLSearchParams(sanitizedData),  // Encode data as URL parameters
-    })
-    .then(response => {
-      if (response.ok) {
-        return refreshProductEntries();  // Refresh the product entries if successful
-      } else {
-        return response.text().then(text => {
-          throw new Error(text);  // Throw an error with the response text
-        });
-      }
-    })
-    .then(() => {
-      document.getElementById("ProductEntryForm").reset(); // Reset form on success
-      closeModal(); // Call a function to close the modal
-    })
-    .catch(error => {
-      alert(error.message); // Show the error message
-    });
-
-    return false;  // Prevent default form submission
-  }
-
-  function closeModal() {
-    document.querySelector("[data-modal-toggle='productModal']").click(); // Simulate a click to close the modal
+    event.preventDefault();
+        document.getElementById("error-message").innerHTML = "";
+        fetch("{% url 'main:add_product_entry_ajax' %}", {
+            method: "POST",
+            body: new FormData(document.querySelector('#ProductEntryForm')),
+            headers: {
+                'X-CSRFToken': '{{ csrf_token }}'
+            },
+        })
+        .then(response => {
+            if (response.ok) {
+                refreshProductEntries();
+                document.getElementById("ProductEntryForm").reset(); 
+                hideModal();
+            } else {
+                return response.text().then(text => {
+                    
+                    document.getElementById("error-message").innerHTML = `<p>${text}</p>`;
+                });
+            }
+        })
   }
   
   async function getProductEntries(){
-    return fetch("{% url 'main:show_json' %}").then((res) => res.json())
+    return fetch("{% url 'main:show_json' %}")
+    .then((res) => res.json())
   }
 
   async function refreshProductEntries() {
@@ -150,8 +136,8 @@
 
             htmlString += `
             <div class="relative break-inside-avoid">
-                <div class="relative top-5 bg-indigo-100 shadow-md rounded-lg mb-6 break-inside-avoid flex flex-col border-2 border-indigo-300 transform rotate-1 hover:rotate-0 transition-transform duration-300">
-                    <div class="bg-indigo-200 text-gray-800 p-4 rounded-t-lg border-b-2 border-indigo-300">
+                <div class="relative top-5 bg-[#FFFEE] shadow-md rounded-lg mb-6 break-inside-avoid flex flex-col border-2 border-red-300 transform rotate-1 hover:rotate-0 transition-transform duration-300">
+                    <div class="bg-orange-200 text-gray-800 p-4 rounded-t-lg border-b-2 border-red-300">
                         <h3 class="font-bold text-xl mb-2">${name}</h3>
                         <p class="text-gray-600">Price: $${price}</p>
                     </div>
@@ -166,7 +152,7 @@
                             <path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
                         </svg>
                     </a>
-                    <a href="/delete/${item.pk}" class="bg-red-500 hover:bg-red-600 text-white rounded-full p-2 transition duration-300 shadow-md">
+                    <a href="/delete/${item.pk}" class="bg-orange-500 hover:bg-orange-600 text-white rounded-full p-2 transition duration-300 shadow-md">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-9 w-9" viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clip-rule="evenodd" />
                         </svg>
