--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,14 +20,14 @@
                     <h1 style="color: #963a2f;" class="text-2xl font-bold text-white ml-10">Thrift Click. </h1> <!-- Added margin to prevent overlap -->
                     <!-- Only show these links on desktop view -->
                     <div class="hidden sm:flex">
-                        <span class="text-white px-3 py-2 text-sm font-medium">Home</span>
-                        <span class="text-white px-3 py-2 text-sm font-medium">Cart</span>
+                        <span class="text-[#963a2f] px-3 py-2 text-sm font-medium">Home</span>
+                        <span class="text-[#963a2f] px-3 py-2 text-sm font-medium">Cart</span>
                     </div>
                 </div>
                 <div class="hidden sm:ml-6 sm:flex sm:items-center sm:ml-auto">
                     {% if user.is_authenticated %}
-                        <span class="text-white mr-4">Welcome, {{ user.username }}</span>
-                        <a href="{% url 'main:logout' %}" class="rounded-md bg-red-500 hover:bg-red-600 text-white px-3 py-2 text-sm font-medium">Logout</a>
+                        <span class="text-white mr-4" style="color: #963a2f;">Welcome, {{ user.username }}</span>
+                        <a href="{% url 'main:logout' %}" class="rounded-md bg-[#963a2f] hover:bg-red-600 text-white px-3 py-2 text-sm font-medium">Logout</a>
                     {% else %}
                         <a href="{% url 'main:login' %}" class="rounded-md bg-blue-500 hover:bg-blue-600 text-white px-3 py-2 text-sm font-medium">Login</a>
                         <a href="{% url 'main:register' %}" class="rounded-md bg-green-500 hover:bg-green-600 text-white px-3 py-2 text-sm font-medium">Register</a>
@@ -44,8 +44,8 @@
             <span class="block text-white px-3 py-2 text-base font-medium">Home</span>
             <span class="block text-white px-3 py-2 text-base font-medium">Cart</span>
             {% if user.is_authenticated %}
-                <span class="block text-white-200 px-3 py-2">Welcome, {{ user.username }}</span>
-                <a href="{% url 'main:logout' %}" class="block rounded-md bg-red-500 hover:bg-red-600 text-white px-3 py-2 text-base font-medium">Logout</a>
+                <span class="block px-3 py-2" style="color: #963a2f;">Welcome, {{ user.username }}</span>
+            <a href="{% url 'main:logout' %}" class="block rounded-md bg-red-500 hover:bg-red-600 text-white px-3 py-2 text-base font-medium">Logout</a>
             {% else %}
                 <a href="{% url 'main:login' %}" class="block rounded-md bg-blue-500 hover:bg-blue-600 text-white px-3 py-2 text-base font-medium">Login</a>
                 <a href="{% url 'main:register' %}" class="block rounded-md bg-green-500 hover:bg-green-600 text-white px-3 py-2 text-base font-medium">Register</a>
